# stm32-i2c

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  stm32-i2c.ioc
Core/Inc/: main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
app/: app.cpp  app.h
app/devices/: icp10125.cpp  icp10125.h
app/drivers/: adc.cpp  adc.h  async.h  button.cpp  button.h  gpio.cpp  gpio.h  i2c.cpp  i2c.h  sci.cpp  sci.h  timer.cpp  timer.h
app/math/crc/: crc.h  crc8maxim.cpp  crc8maxim.h
app/utilities/: log.cpp  log.h  performanceTimer.cpp  performanceTimer.h
cmake/: gcc-arm-none-eabi.cmake
tests/: CMakeLists.txt  crc8maxim-tests.cpp
